--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/degen-vc/token-installation-timelock#readme",
   "dependencies": {
+    "@openzeppelin/cli": "^2.8.2",
     "@truffle/hdwallet-provider": "*"
   },
   "old": {
@@ -32,6 +33,10 @@
     "solidity-docgen": "^0.5.8"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-etherscan": "^2.0.1"
+    "@nomiclabs/hardhat-etherscan": "^2.0.1",
+    "@openzeppelin/truffle-upgrades": "^1.3.0",
+    "ethers": "^5.0.23",
+    "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "truffle-plugin-verify": "^0.5.2"
   }
 }
