--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paypolitan-token-timelock",
+  "name": "roads-to-defi",
   "version": "1.0.0",
   "description": "A contract for releasing token payments in equal chunks at regular intervals.",
   "main": "index.js",
@@ -18,7 +18,12 @@
   "homepage": "https://github.com/degen-vc/token-installation-timelock#readme",
   "dependencies": {
     "@openzeppelin/cli": "^2.8.2",
-    "@truffle/hdwallet-provider": "*"
+    "@truffle/config": "^1.2.33",
+    "@truffle/contract": "^4.3.1",
+    "@truffle/hdwallet-provider": "*",
+    "@typechain/truffle-v5": "^3.0.0",
+    "@typechain/web3-v1": "^1.0.0",
+    "hardhat": "^2.0.4"
   },
   "old": {
     "@openzeppelin/contracts": "*",
@@ -33,8 +38,11 @@
     "solidity-docgen": "^0.5.8"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-etherscan": "^2.0.1",
+    "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@openzeppelin/truffle-upgrades": "^1.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.15.0",
+    "eslint-plugin-vue": "^7.2.0",
     "ethers": "^5.0.23",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "truffle-plugin-verify": "^0.5.2"
